--- a/server/static/frontend/index.html
+++ b/server/static/frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/static/frontend/assets/logo.Buz3rqNi.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QR Code Attendance</title>
-    <script type="module" crossorigin src="/static/frontend/assets/main.R4OWzCMX.js"></script>
+    <title>Teaching Chatbot</title>
+    <script type="module" crossorigin src="/static/frontend/assets/main.7B8rNFlI.js"></script>
     <link rel="stylesheet" crossorigin href="/static/frontend/assets/main.XuAEiUhh.css">
   </head>
   <body>
